[package]
name = "constellation-bgp"
version = "0.5.1"
edition = "2018"


[dependencies]
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.14"
anyhow = "1.0"
thiserror = "1.0.28"
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix="0.12.0"
actix-rt="2.2.0"
actix-broker = "0.4.1"
chrono = "0.4.19"
rust_decimal="1.15.0"
trust-dns-resolver = "0.20.3"
constellation-shared={ git ="https://github.com/PFC-Validator/constellation-shared.git",  version = "0.5", branch="v0.5"}