[package]
name = "constellation-shared"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

terra-rust-api = "0.3.6"
log = "0.4.14"
chrono = "0.4.19"
anyhow = "1.0"
actix="0.12.0"
actix-broker = "0.4.1"